After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758207 - debugutils: Fix string memory leak
debugutils: Fix string memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-17 00:18 UTC by Vineeth
Modified: 2015-11-17 03:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix string leak (654 bytes, patch)
2015-11-17 00:19 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-11-17 00:18:14 UTC
While trying to use dot file, found the below leak

==12574== 175 bytes in 2 blocks are definitely lost in loss record 14,923 of 15,836
==12574==    at 0x402E324: realloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==12574==    by 0x4B9F285: __vasprintf_chk (vasprintf_chk.c:88)
==12574==    by 0x4A07689: g_vasprintf (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==12574==    by 0x49E0FF2: g_strdup_vprintf (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==12574==    by 0x49E1022: g_strdup_printf (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==12574==    by 0x40F355C: debug_dump_get_object_params (gstdebugutils.c:155)
==12574==    by 0x40F36F1: debug_dump_pad (gstdebugutils.c:201)
==12574==    by 0x40F3BDB: debug_dump_element_pads.isra.0 (gstdebugutils.c:308)
==12574==    by 0x40F4775: debug_dump_element (gstdebugutils.c:603)
==12574==    by 0x40F4DC0: gst_debug_bin_to_dot_data (gstdebugutils.c:762)
==12574==    by 0x40F4F67: gst_debug_bin_to_dot_file (gstdebugutils.c:804)
==12574==    by 0x40F5230: gst_debug_bin_to_dot_file_with_ts (gstdebugutils.c:851)
Comment 1 Vineeth 2015-11-17 00:19:01 UTC
Created attachment 315721 [details] [review]
Fix string leak
Comment 2 Thiago Sousa Santos 2015-11-17 03:38:26 UTC
commit 61a8c946acb077959dfec78fc6393a5bea17a260
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Tue Nov 17 09:17:58 2015 +0900

    debugutils: Fix string memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758207